# ocelots-circom-circuits

./: .gitignore  .gitmodules  README.md  build.sh  package-lock.json  package.json
common/src/constants/: constants.ts
common/src/utils/: formatCallData.ts  formatNames.ts  generateInputs.ts  majority.ts  mockPassportData.ts  passportData.ts  pubkeyTree.ts  revealBitmap.ts  shaPad.ts  types.ts  utils.ts
scripts/: build_disclose_circuit.sh  build_register_circuit.sh
test/: disclose.test.ts  is_older_than.test.ts  is_valid.test.ts  register.test.ts
witnesscalc/: CMakeLists.txt  README.md
witnesscalc/src/: CMakeLists.txt  witnesscalc_disclose.h  witnesscalc_register_sha256WithRSAEncryption_65537.h
